Fixed chatgpt context saving error